Next test release

--- a/de.html
+++ b/de.html
@@ -1,7 +1,27 @@
-<html>
-<body>
-<p><b>#lostbalcony</b> ist eine Online-Initiative, die vor dem Verlust Georgiens als Balkon Europas warnt.
-Die Gefahr, dass Georgien im Jahr 2022 unte Eindruck eines bruten Krieges in der Ukraine bei seinen Bestrebungen Teil der Europäischen Union (EU) zu werden vergessen wird wäre ein historischer Fehler.
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Deutsch</title>
+  <link rel="stylesheet" href="css/main.css">
+  <style>
+body {
+  margin: 0 auto;
+  width: 95%;
+  text-align: justify;
+}
+
+body p {
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+}  </style>
+<body style="margin-left: 20px; margin-right: 20px; font-family: Arial, Helvetica, sans-serif; font-size: 20px;">
+<p><span style="font-family: weathers;">#lostbalcony</span> ist eine Online-Initiative, die vor dem Verlust Georgiens als Balkon Europas warnt.
+Die Gefahr, dass Georgien im Jahr 2022 unter Eindruck eines bruten Krieges in der Ukraine bei seinen Bestrebungen Teil der Europäischen Union (EU) zu werden vergessen wird wäre ein historischer Fehler.
 Georgien ist genau wie die Ukraine und die Republik Moldau ein Teil Europas.</p>
 
 <p>Besonders Georgien mit seiner Lage am Rand Europas, zwischen Europa und Asien oft nur als "Balkon Europas" bezeichnet hat eine enge geschichtliche Verbindung zu Europa.</p>
@@ -12,10 +32,18 @@ Eine Form europäischen Kulturguts ist der Weinanbau, der in Georgien Tradition 
 
 <p>Auch wenn die Beziehung Georgiens mit Russland als großem Nachbarn im Kaukasus und Georgien als Teil der Sowjetunion im 19. und 20. Jahrhundert die Geschichte Georgiens geprägt hat, ist dies kein Grund dafür Georgien aus der europäischen Familie auszuschließen.</p>
 
-<p>Auch wenn die Aufnahme Georgiens in die EU evtl. noch nicht heute auf der Tagesordnung steht darf bei der aktuellen politischen Lage georgien nicht der Willkür seiner Nachbarn überlassen werden.
-Gemeinsam will diese Initiative mit Bildern von Balkonen in Georgien ein politisches Zeichen gegen Georgien als #lostbalcony setzen. Georgien als Kandidat für die EU ist ein politisches Zeichen und Georgien sollte nicht nur als unbeschreiblich schönes Urlaubsland am Rande Europas, sondern als Teil Europas mit einer Zukunft in der EU gesehen werden.</p>
+<p>Georgien hat schon immer eine enge Beziehung zu Europa gesucht aber die früheren fadenscheinigen geostrategischen Gründe sollten im 21. Jahrhundert überholt sein:</p>
+<ul>
+<li><a href="https://de.wikipedia.org/wiki/Sulchan-Saba_Orbeliani">Sulchan-Saba_Orbeliani</a>
+<li><a href="https://de.wikipedia.org/wiki/Erekle_II.">Erekle_II.</a>
+<li><a href="https://de.wikipedia.org/wiki/Demokratische_Republik_Georgien">Demokratische Republik Georgien<7a>
+<li><a href="https://de.wikipedia.org/wiki/Kaukasuskrieg_2008">Kaukasuskrieg 2008</a>
+<li><a href="https://www.spiegel.de/ausland/gipfel-in-bruessel-ukraine-und-moldau-werden-eu-beitrittskandidaten-a-b5a8c5f5-285e-436a-9955-ff9294790581">Beitrittskandidaten 2022</a>
+<li><a href="https://www.spiegel.de/politik/deutschland/besuch-in-georgien-nach-eu-ablehnung-wie-ministerin-schulze-sorry-sagt-a-3b3944a7-9150-4e8d-8cfb-eb44b7bf49fc?utm_source=newsshowcase&utm_medium=discover&utm_campaign=CCwqFwgwKg8IACoHCAowydjaAjDA_BswurtbMKzHZw&utm_content=bullets&sara_ecid=soci_upd_wbMbjhOSvViISjc8RPU89NcCvtlFcJ">Schulze</a>
+<li><a href="https://zdfheute-stories-scroll.zdf.de/putin-kriege-ukraine/index.html#xtor=CS5-282">Putin Kriege Ukraine</a>
+</ul>
 
-https://www.spiegel.de/ausland/gipfel-in-bruessel-ukraine-und-moldau-werden-eu-beitrittskandidaten-a-b5a8c5f5-285e-436a-9955-ff9294790581
-
+<p>Auch wenn die Aufnahme Georgiens in die EU evtl. noch nicht heute auf der Tagesordnung steht darf bei der aktuellen politischen Lage darf Georgien nicht der Willkür seiner Nachbarn überlassen werden.
+Gemeinsam will diese Initiative mit Bildern von Balkonen in Georgien ein politisches Zeichen gegen Georgien als <span style="font-family: weathers;">#lostbalcony</span> setzen. Georgien als Kandidat für die EU ist ein politisches Zeichen und Georgien sollte nicht nur als unbeschreiblich schönes Urlaubsland am Rande Europas, sondern als Teil Europas mit einer Zukunft in der EU gesehen werden.</p>
 </body>
 </html>
