--- a/test.html
+++ b/test.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/gallery.css">
   <link rel="stylesheet" media="screen and (max-width: 320px)" href="css/gallery1.css">
-  <link rel="stylesheet" media="screen and (max-width: 500px)" href="css/gallery2.css">
-  <link rel="stylesheet" media="screen and (max-width: 640px)" href="css/gallery3.css">
-  <link rel="stylesheet" media="screen and (max-width: 1599px)" href="css/gallery4.css">
+  <link rel="stylesheet" media="screen and (min-width: 321px) and (max-width: 639px)" href="css/gallery2.css">
+  <link rel="stylesheet" media="screen and (min-width: 640px) and (max-width: 1023px)" href="css/gallery3.css">
+  <link rel="stylesheet" media="screen and (min-width: 1024px) and (max-width: 1599px)" href="css/gallery4.css">
   <link rel="stylesheet" media="screen and (min-width: 1600px)" href="css/gallery7.css">
   <script>
   let currentLang = "de";
@@ -97,82 +97,105 @@
 	let link = document.querySelector("#gallery-title");
 	document.querySelector("#balcony-text").remove();
 	document.querySelector("#georgia-text").remove();
-	let balcony = document.createElement("p");
+	let balcony = document.createElement("h2");
     balcony.setAttribute("id", "balcony-text");
     link.appendChild(balcony);
     let bText = document.createTextNode(lostBalconyByLang[currentLang]);
     balcony.appendChild(bText);
-	let georgia = document.createElement("h2");
+	let georgia = document.createElement("h1");
     georgia.setAttribute("id", "georgia-text");
     link.appendChild(georgia);
     let gText = document.createTextNode(georgiaByLang[currentLang]);
     georgia.appendChild(gText);
 	showMission();	
   }
+
+  function showImpressum() {
+    // Create a popup text window
+	let container = document.body;
+	let newMissionWindow = document.createElement("div");
+	newMissionWindow.setAttribute("class", "text-window");
+	newMissionWindow.setAttribute("onclick", "closeText()");
+	container.appendChild(newMissionWindow);
+	let newMissionText = document.createElement("div");
+	let mText = document.createElement('iframe');
+	mText.style.display = "block";
+	mText.frameborder = "0";
+	mText.scrolling = "auto";
+	mText.width = "100%"
+	mText.height = "100%"
+	mText.src = "impressum.html";
+	mText.setAttribute("onclick", "closeText()");
+	newMissionText.appendChild(mText);
+	newMissionWindow.appendChild(newMissionText);
+  }
+  
   </script>
 </head>
-<body>
-
+<body class="wrapper-main">
   <header id="header-main">
-  
-    <nav class="wrapper-main">
-      <span style="margin-top: 30px; font-weight: 700; font-size: 40px; font-family: Arial;">#lostbalcony</span>
+    <nav>
+      <div style="margin-top: 10px; margin-bottom: 20px;">
+	  <span style="font-family: weatherd; font-size: 72px;">#lostbalcony</span>
+	  <span style="font-family: Arial, Helvetica, sans-serif; font-size: 30px; padding-left: 5px;">http://lostbalcony.eu</span>
+	  </div>
 	  <select onchange="changeLang.call(this, event)" id="language-picker-select">
-	    <!-- Bulgarien -->
-        <option value="bg">BG - Bǎlgariya</option>
-		<option value="de" selected="selected">DE - Deutsch</option>
+	    <!-- Bulgarien --> 
+        <option value="bg">&#x1F1E7;&#x1F1EC; &nbsp; BG - Bǎlgariya</option>
+		<option value="de" selected="selected">&#x1F1E9;&#x1F1EA; &nbsp; DE - Deutsch</option>
 		<!-- Dänemark -->
-		<option value="dk">DK - dansk</option>
+		<option value="dk">&#x1F1E9;&#x1F1F0; &nbsp; DK - dansk</option>
 		<!-- Estland -->
-		<option value="ee">EE - eesti keel</option>
+		<option value="ee">&#x1F1EA;&#x1F1EA; &nbsp; EE - eesti keel</option>
 		<!-- Griechenland -->
-		<option value="en">EN - English</option>
+		<option value="en">&#x1F1EC;&#x1F1E7; &nbsp; EN - English</option>
 		<!-- Spanien -->
-		<option value="es">ES - español</option>
+		<option value="es">&#x1F1EA;&#x1F1F8; &nbsp; ES - español</option>
 		<!-- Finnland -->
-		<option value="fi">FI - suomi</option>
-		<option value="fr">FR - français</option>
+		<option value="fi">&#x1F1EB;&#x1F1EE; &nbsp; FI - suomi</option>
+		<option value="fr">&#x1F1EB;&#x1F1F7; &nbsp; FR - français</option>
 		<!-- Georgien -->
-		<option value="ge">GE - kartuli</option>
-		<option value="gr">GR - modern greek</option>
+		<option value="ge">&#x1F1EC;&#x1F1EA; &nbsp; GE - kartuli</option>
+		<option value="gr">&#x1F1EC;&#x1F1F7; &nbsp; GR - modern greek</option>
 		<!-- Kroatien -->
-		<option value="hr">HR - hrvatski</option>
+		<option value="hr">&#x1F1ED;&#x1F1F7; &nbsp; HR - hrvatski</option>
 		<!-- Ungarn -->
-		<option value="hu">HU - magyar</option>
+		<option value="hu">&#x1F1ED;&#x1F1FA; &nbsp; HU - magyar</option>
 		<!-- Irish -->
-		<option value="ie">IE - Gaelic</option>
-		<option value="it">IT - italiano</option>
+		<option value="ie">&#x1F1EE;&#x1F1EA; &nbsp; IE - Gaelic</option>
+		<option value="it">&#x1F1EE;&#x1F1F9; &nbsp; IT - italiano</option>
 		<!-- Litauen -->
-		<option value="lt">LT - lietuvių kalba</option>
+		<option value="lt">&#x1F1F1;&#x1F1F9; &nbsp; LT - lietuvių kalba</option>
 		<!-- Lettland -->
-		<option value="lv">LV - latviešu valoda</option>
+		<option value="lv">&#x1F1F1;&#x1F1FB; &nbsp; LV - latviešu valoda</option>
 		<!-- Moldau (Moldawien) -->
-		<option value="md">MD - moldovenească</option>
+		<option value="md">&#x1F1F2;&#x1F1E9; &nbsp; MD - moldovenească</option>
 		<!-- Malata -->
-		<option value="mt">MT - Malti</option>
+		<option value="mt">&#x1F1F2;&#x1F1F9; &nbsp; MT - Malti</option>
 		<!-- Niederlande -->
-		<option value="nl">NL - Nederlands</option>
+		<option value="nl">&#x1F1F3;&#x1F1F1; &nbsp; NL - Nederlands</option>
 		<!-- Polen -->
-		<option value="pl">PL - polski</option>
+		<option value="pl">&#x1F1F5;&#x1F1F1; &nbsp; PL - polski</option>
 		<!-- Portugal -->
-		<option value="pt">PT - português</option>
+		<option value="pt">&#x1F1F5;&#x1F1F9; &nbsp; PT - português</option>
 		<!-- Rumänien -->
-		<option value="ro">RO - română</option>
+		<option value="ro">&#x1F1F7;&#x1F1F4; &nbsp; RO - română</option>
 		<!-- Slowakei -->
-		<option value="sk">SK - slovenčina</option>
+		<option value="sk">&#x1F1F8;&#x1F1F0; &nbsp; SK - slovenčina</option>
 		<!-- Slowenien -->
-		<option value="si">SI - slovenščina</option>
+		<option value="si">&#x1F1F8;&#x1F1EE; &nbsp; SI - slovenščina</option>
 		<!-- schweden -->
-		<option value="se">SE - svenska</option>
+		<option value="se">&#x1F1F8;&#x1F1EA; &nbsp; SE - svenska</option>
 		<!-- Ukraine -->
-		<option value="ua">UA - ukrainska</option>
+		<option value="ua">&#x1F1FA;&#x1F1E6; &nbsp; UA - ukrainska</option>
       </select>
     </nav>
+    <a id="gallery-title" onclick="showMission()">
+      <h2 id="balcony-text">Nicht nur der verlorene Balkon Europas!</h2>
+      <h1 id="georgia-text">Georgien</h1>
+    </a>
   </header>
-
   <section id="index-gallery" class="wrapper-gallery">
-    <a id="gallery-title" onclick="showMission()"><p id="balcony-text">Nicht nur der verlorene Balkon Europas!</p>
-    <h2 id="georgia-text">Georgien</h2></a>
     <div class="gallery-img img-1">
       <div><a href="#">This is a title</a></div>
     </div>
@@ -379,10 +402,63 @@
 
   <section id="footer-main">
     <div class="footer-links">
-	  <a href="#">Impressum</a>
+	  <a onclick="showImpressum()">Impressum</a>
 	  <a href="mailto:info@lostbalcony.eu">Contact</a>
 	</div>
-	<div class="footer-copyright">© Copyright 2022 lostbalcony.eu - All Rights Reserved </div>
-  <section>
+	<div class="social-list">
+		<div class="soc-item"> <a href="http://google.persoenliches-georgien.de" target="_blank">
+			<span class="socicon-google socicon mbr-iconfont mbr-iconfont-social" title="Google"></span>
+		  </a> </div>
+		<div class="soc-item"> <a href="mailto:?body=%0AUnter%20persoenliches-georgien.de%20findest%20Du%20neue%20Ideen%20f%C3%BCr%20Deinen%20n%C3%A4chsten%20%23SuperurlaubGeorgien.%0ABeginn Deine%20Reiseplanung%20unter%3A%20http%3A%2F%2Fpersoenliches-georgien.de%2Fplan.html%0A&subject=Urlaubstipp">
+			<span class="socicon-mail socicon mbr-iconfont mbr-iconfont-social" title="E-Mail senden"></span>
+		  </a> </div>
+		<div class="soc-item"> <a href="https://twitter.com/intent/tweet?text=%40DeGeorgien+hilft+unter+persoenliches-georgien.de+mit+Ideen+f%C3%BCr+den+n%C3%A4chsten+%23SuperurlaubGeorgien%3A+http%3A%2F%2Fpersoenliches-georgien.de%2Fplan.html" title="Tweet senden" target="_blank">
+			<span class="socicon-twitter socicon mbr-iconfont mbr-iconfont-social"></span>
+		  </a> </div>
+		<div class="soc-item"> <a href="https://telegram.me/share/url?url=persoenliches-georgien.de+hilft+mit+Ideen+f%C3%BCr+den+n%C3%A4chsten+%23SuperurlaubGeorgien%3A+http%3A%2F%2Fpersoenliches-georgien.de%2Fplan.html" title="Bei Telegram teilen" target="_blank">
+			<span class="socicon-telegram socicon mbr-iconfont mbr-iconfont-social"></span>
+		  </a> </div>
+		<div class="soc-item"> <a href="https://www.facebook.com/PersoenlichesGeorgien/" title="Facebook Gruppe" target="_blank">
+			<span class="socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
+		  </a> </div>
+		<div class="soc-item"> <a href="https://api.whatsapp.com/send?text=Suchst+Du+Unterst%C3%BCtzung+bei+der+Planung+Deines+n%C3%A4chsten+%23SuperurlaubGeorgien%3F+https%3A%2F%2Fpersoenliches-georgien.de%2F
+" title="WhatsApp" target="_blank">
+			<span class="socicon-whatsapp socicon mbr-iconfont mbr-iconfont-social"></span>
+		  </a> </div>
+		<div class="soc-item"> <a href="https://www.youtube.com/channel/UC9ByMG9KYp-zsR9nMgUdHrw" title="Youtube Channel" target="_blank">
+			<span class="socicon-youtube socicon mbr-iconfont mbr-iconfont-social"></span>
+		  </a> </div>
+		<div class="soc-item"> <a href="https://instagram.com/persoenlichesgeorgien/" title="Instagram Beiträge" target="_blank">
+			<span class="socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
+		  </a> </div>
+		<div class="soc-item"> <a href="https://www.pinterest.de/pin/create/button/?url=https://persoenliches-georgien.de&media=https://persoenliches-georgien.de/images/DeGeorgien.png&description=persoenliches-georgien.de" title="Auf Pinterest teilen" target="_blank">
+			<span class="socicon-pinterest socicon mbr-iconfont mbr-iconfont-social"></span>
+		  </a> </div>
+		<div class="soc-item"> <a href="https://tiktok.com/@DeGeorgien" title="TikTok Beiträge" target="_blank">
+			<span class="socicon-tiktok socicon mbr-iconfont mbr-iconfont-social"></span>
+		  </a> </div>
+		<div class="soc-item"> <a href="https://www.behance.net/DeGeorgien" title="Behance Projekte" target="_blank">
+			<span class="socicon-behance socicon mbr-iconfont mbr-iconfont-social"></span>
+		  </a> </div>
+		<div class="soc-item"> <a href="https://share.flipboard.com/bookmarklet/popout?v=2&title=persoenliches-georgien.de&url=https%3A%2F%2Fpersoenliches-georgien.de" title="In FlipBoard teilen" target="_blank">
+			<span class="socicon-flipboard socicon mbr-iconfont mbr-iconfont-social"></span>
+		  </a> </div>
+		<div class="soc-item"> <a href="https://getpocket.com/save?url=https%3A%2F%2Fpersoenliches-georgien.de" title="Mit Pocket teilen" target="_blank">
+			<span class="socicon-pocket socicon mbr-iconfont mbr-iconfont-social"></span>
+		  </a> </div>
+		<div class="soc-item"> <a href="https://degeorgien.tumblr.com/" title="In Tumblr weitere Ideen finden" target="_blank">
+			<span class="socicon-tumblr socicon mbr-iconfont mbr-iconfont-social"></span>
+		  </a> </div>
+		<div class="soc-item"> <a href="https://www.xing.com/spi/shares/new?url=https://persoenliches-georgien.de" title="Auf Xing teilen" 
+		  onclick="window.open(this.href, 'xing', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">
+			<span class="socicon-xing socicon mbr-iconfont mbr-iconfont-social"></span>
+		  </a> </div>
+		<div class="soc-item"> <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://persoenliches-georgien.de&title=persoenliches-georgien.de&summary=persoenliches-georgien.de&source=persoenliches-georgien.de" title="Auf LinkedIn teilen" 
+		  onclick="window.open(this.href, 'linkedin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">
+			<span class="socicon-linkedin socicon mbr-iconfont mbr-iconfont-social"></span>
+		  </a> </div>
+	</div>
+	<div class="footer-copyright">© Copyright 2022 lostbalcony.eu + <a href="https://persoenliches-georgien.de" target="_blank">persoenliches-georgien.de</a> - All Rights Reserved </div>
+  </section>
 </body>
 </html>
