Next step mission DE

--- a/de.html
+++ b/de.html
@@ -9,8 +9,12 @@
   <style>
 body {
   margin: 0 auto;
+  margin-left: 20px;
+  margin-right: 20px; 
   width: 95%;
   text-align: justify;
+  font-family: Arial, Helvetica, sans-serif; 
+  font-size: 20px;
 }
 
 body p {
@@ -19,24 +23,29 @@ body p {
   -ms-hyphens: auto;
   hyphens: auto;
 }  </style>
-<body style="margin-left: 20px; margin-right: 20px; font-family: Arial, Helvetica, sans-serif; font-size: 20px;">
-<p><span style="font-family: weathers;">#lostbalcony</span> ist eine Online-Initiative, die vor dem Verlust Georgiens als Balkon Europas warnt.
-Die Gefahr, dass Georgien im Jahr 2022 unter Eindruck eines bruten Krieges in der Ukraine bei seinen Bestrebungen Teil der Europäischen Union (EU) zu werden vergessen wird wäre ein historischer Fehler.
-Georgien ist genau wie die Ukraine und die Republik Moldau ein Teil Europas.</p>
+<body>
+<h2>Mission</h2>
+<p><span style="font-family: weathers; font-size: 22px;">#lostbalcony</span> ist eine Online-Initiative, die vor dem Verlust Georgiens als Balkon Europas warnt. Die Gefahr, dass Georgien im Jahr 2022 unter Eindruck eines bruten Krieges in der Ukraine bei seinen Bestrebungen Teil der Europäischen Union (EU) zu werden vergessen wird wäre ein historischer Fehler. Georgien ist genau wie die Ukraine und die Republik Moldau ein Teil Europas.</p>
 
-<p>Besonders Georgien mit seiner Lage am Rand Europas, zwischen Europa und Asien oft nur als "Balkon Europas" bezeichnet hat eine enge geschichtliche Verbindung zu Europa.</p>
+<p>Georgien das wegen seiner Lage am Rand Europas, zwischen Europa und Asien oft nur als "Balkon Europas" bezeichnet wird, hat eine enge geschichtliche Verbindung zu Europa.</p>
 
-<p>Die Ausbreitung des Homo erectus von Afrika nach Europa wird durch aktuelle Ausgrabungen in Georgien nachgewiesen und diese zeigen wie Frühmenschen vor 2 Mio. Jahren in Dmanissi zu finden sind.<br/>
-Eine Form europäischen Kulturguts ist der Weinanbau, der in Georgien Tradition hat und bereits 6.000 Jahre v. Chr. in der Region Kolchis im Westen Georgiens Spuren hinterlassen hat. Ausgrabungen belegen den Anbau kultivierter Weinreben, die noch heute angebaut werden.
+<p><a href="https://persoenliches-georgien.de/tipps_ursprung.html" target="_blank"><img src="img/mission/schaedel_wein.png" width="140" align=right style="margin: 10px;" alt="" title="Homo georgicus - der erste europäische Winzer" /></a> Die Ausbreitung des Homo erectus von Afrika nach Europa wird durch aktuelle Ausgrabungen in Georgien nachgewiesen und diese zeigen wie Frühmenschen vor 2 Mio. Jahren in Dmanissi - im südlichen Georgien - zu finden sind.<br/>
+Eine andere Form europäischen Kulturguts ist der Weinanbau, der in Georgien Tradition hat und bereits 6.000 Jahre v. Chr. in der Region Kolchis im Westen Georgiens Spuren hinterlassen hat. Ausgrabungen belegen den Anbau kultivierter Weinreben, die noch heute angebaut werden.
 </p>
 
 <p>Auch wenn die Beziehung Georgiens mit Russland als großem Nachbarn im Kaukasus und Georgien als Teil der Sowjetunion im 19. und 20. Jahrhundert die Geschichte Georgiens geprägt hat, ist dies kein Grund dafür Georgien aus der europäischen Familie auszuschließen.</p>
 
-<p>Georgien hat schon immer eine enge Beziehung zu Europa gesucht aber die früheren fadenscheinigen geostrategischen Gründe sollten im 21. Jahrhundert überholt sein:</p>
+<p>Georgien hat schon immer eine enge Beziehung zu Europa gesucht und die früheren, fadenscheinigen, geostrategischen Gründe sollten im 21. Jahrhundert überholt sein:</p>
+
+<p><table border="0"><tr>
+<td><a href="https://de.wikipedia.org/wiki/Sulchan-Saba_Orbeliani" target="_blank"><img src="img/mission/Sulchan-Saba_Orbeliani.jpg" height="140" align=left style="margin-right: 10px;" alt="" title="Sulchan-Saba Orbeliani"/>Schon zwischen 1713 und 1716 besuchte Sulchan-Saba Orbeliani, ein georgischer Fürst, Mönch, Diplomat und Schriftsteller im Auftrag des georgischen Königs den Papst und den französischen König Ludwig XIV, um Georgien mit Westeuropa zu verbinden.</td>
+<td style="width: 5%;">&nbsp;</td>
+<td><a href="https://de.wikipedia.org/wiki/Erekle_II."><img src="img/mission/Heraclius_II_of_Eastern_Georgia.jpg" height="140" align=right style="margin-left: 10px;" alt="" title="Erekle II."/>Auch die Außenpolitik des späteren König Erekle II. (* 7. November 1720; † 11. Januar 1798) war stark europäisch orientiert. Er suchte Bündnisse mit verschiedenen europäischen Regierungen gegen Persien und das Osmanische Reich, fand jedoch keine Unterstützung.
+</td>
+</tr></table>
 <ul>
-<li><a href="https://de.wikipedia.org/wiki/Sulchan-Saba_Orbeliani">Sulchan-Saba_Orbeliani</a>
-<li><a href="https://de.wikipedia.org/wiki/Erekle_II.">Erekle_II.</a>
-<li><a href="https://de.wikipedia.org/wiki/Demokratische_Republik_Georgien">Demokratische Republik Georgien<7a>
+<li></a>
+<li><a href="https://de.wikipedia.org/wiki/Demokratische_Republik_Georgien">Demokratische Republik Georgien</a>
 <li><a href="https://de.wikipedia.org/wiki/Kaukasuskrieg_2008">Kaukasuskrieg 2008</a>
 <li><a href="https://www.spiegel.de/ausland/gipfel-in-bruessel-ukraine-und-moldau-werden-eu-beitrittskandidaten-a-b5a8c5f5-285e-436a-9955-ff9294790581">Beitrittskandidaten 2022</a>
 <li><a href="https://www.spiegel.de/politik/deutschland/besuch-in-georgien-nach-eu-ablehnung-wie-ministerin-schulze-sorry-sagt-a-3b3944a7-9150-4e8d-8cfb-eb44b7bf49fc?utm_source=newsshowcase&utm_medium=discover&utm_campaign=CCwqFwgwKg8IACoHCAowydjaAjDA_BswurtbMKzHZw&utm_content=bullets&sara_ecid=soci_upd_wbMbjhOSvViISjc8RPU89NcCvtlFcJ">Schulze</a>
@@ -44,6 +53,6 @@ Eine Form europäischen Kulturguts ist der Weinanbau, der in Georgien Tradition 
 </ul>
 
 <p>Auch wenn die Aufnahme Georgiens in die EU evtl. noch nicht heute auf der Tagesordnung steht darf bei der aktuellen politischen Lage darf Georgien nicht der Willkür seiner Nachbarn überlassen werden.
-Gemeinsam will diese Initiative mit Bildern von Balkonen in Georgien ein politisches Zeichen gegen Georgien als <span style="font-family: weathers;">#lostbalcony</span> setzen. Georgien als Kandidat für die EU ist ein politisches Zeichen und Georgien sollte nicht nur als unbeschreiblich schönes Urlaubsland am Rande Europas, sondern als Teil Europas mit einer Zukunft in der EU gesehen werden.</p>
+Gemeinsam will diese Initiative mit Bildern von Balkonen in Georgien ein politisches Zeichen gegen Georgien als <span style="font-family: weathers; font-size: 20px;">#lostbalcony</span> setzen. Georgien als Kandidat für die EU ist ein politisches Zeichen und Georgien sollte nicht nur als unbeschreiblich schönes Urlaubsland am Rande Europas, sondern als Teil Europas mit einer Zukunft in der EU gesehen werden.</p>
 </body>
 </html>
