--- a/impressum.html
+++ b/impressum.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Impressum</title>
+  <title>Deutsch</title>
   <link rel="stylesheet" href="css/main.css">
   <style>
 body {
   margin: 0 auto;
+  margin-left: 20px;
+  margin-right: 20px; 
   width: 95%;
   text-align: justify;
+  font-family: Arial, Helvetica, sans-serif; 
+  font-size: 20px;
 }
 
 body p {
@@ -19,8 +23,8 @@ body p {
   -ms-hyphens: auto;
   hyphens: auto;
 }  </style>
-<body style="margin-left: 20px; margin-right: 20px; font-family: Arial, Helvetica, sans-serif; font-size: 20px;">
-<h3>Impressum</h3>
+<body>
+<h2>Impressum</h2>
 
 <h4>Informationspflicht laut &sect; 5 TMG</h4>
 <p>persoenliches-georgien.de<br /><br />
