--- a/de.html
+++ b/de.html
@@ -29,7 +29,7 @@ body p {
 
 <p>Georgien das wegen seiner Lage am Rand Europas, zwischen Europa und Asien oft nur als "Balkon Europas" bezeichnet wird, hat eine enge geschichtliche Verbindung zu Europa.</p>
 
-<p><a href="https://persoenliches-georgien.de/tipps_ursprung.html" target="_blank"><img src="img/mission/schaedel_wein.png" width="140" align=right style="margin: 10px;" alt="" title="Homo georgicus - der erste europäische Winzer" /></a> Die Ausbreitung des Homo erectus von Afrika nach Europa wird durch aktuelle Ausgrabungen in Georgien nachgewiesen und diese zeigen wie Frühmenschen vor 2 Mio. Jahren in Dmanissi - im südlichen Georgien - zu finden sind.<br/>
+<p><a href="https://persoenliches-georgien.de/tipps_ursprung.html" target="_blank"><img src="img/mission/schaedel_wein.png" width="160" align=right style="margin-left: 10px;" alt="" title="Homo georgicus - der erste europäische Winzer" /></a> Die Ausbreitung des Homo erectus von Afrika nach Europa wird durch aktuelle Ausgrabungen in Georgien nachgewiesen und diese zeigen wie Frühmenschen vor 2 Mio. Jahren in Dmanissi - im südlichen Georgien - zu finden sind.<br/>
 Eine andere Form europäischen Kulturguts ist der Weinanbau, der in Georgien Tradition hat und bereits 6.000 Jahre v. Chr. in der Region Kolchis im Westen Georgiens Spuren hinterlassen hat. Ausgrabungen belegen den Anbau kultivierter Weinreben, die noch heute angebaut werden.
 </p>
 
@@ -38,21 +38,23 @@ Eine andere Form europäischen Kulturguts ist der Weinanbau, der in Georgien Tra
 <p>Georgien hat schon immer eine enge Beziehung zu Europa gesucht und die früheren, fadenscheinigen, geostrategischen Gründe sollten im 21. Jahrhundert überholt sein:</p>
 
 <p><table border="0"><tr>
-<td><a href="https://de.wikipedia.org/wiki/Sulchan-Saba_Orbeliani" target="_blank"><img src="img/mission/Sulchan-Saba_Orbeliani.jpg" height="140" align=left style="margin-right: 10px;" alt="" title="Sulchan-Saba Orbeliani"/>Schon zwischen 1713 und 1716 besuchte Sulchan-Saba Orbeliani, ein georgischer Fürst, Mönch, Diplomat und Schriftsteller im Auftrag des georgischen Königs den Papst und den französischen König Ludwig XIV, um Georgien mit Westeuropa zu verbinden.</td>
+<td><a href="https://de.wikipedia.org/wiki/Sulchan-Saba_Orbeliani" target="_blank"><img src="img/mission/Sulchan-Saba_Orbeliani.jpg" height="140" align=left style="margin-right: 10px;" alt="" title="Sulchan-Saba Orbeliani"/></a>Schon zwischen 1713 und 1716 besuchte Sulchan-Saba Orbeliani, ein georgischer Fürst, Mönch, Diplomat und Schriftsteller im Auftrag des georgischen Königs den Papst und den französischen König Ludwig XIV, um Georgien mit Westeuropa zu verbinden.</td>
 <td style="width: 5%;">&nbsp;</td>
-<td><a href="https://de.wikipedia.org/wiki/Erekle_II."><img src="img/mission/Heraclius_II_of_Eastern_Georgia.jpg" height="140" align=right style="margin-left: 10px;" alt="" title="Erekle II."/>Auch die Außenpolitik des späteren König Erekle II. (* 7. November 1720; † 11. Januar 1798) war stark europäisch orientiert. Er suchte Bündnisse mit verschiedenen europäischen Regierungen gegen Persien und das Osmanische Reich, fand jedoch keine Unterstützung.
+<td><a href="https://de.wikipedia.org/wiki/Erekle_II." target="_blank"><img src="img/mission/Heraclius_II_of_Eastern_Georgia.jpg" height="140" align=right style="margin-left: 10px;" alt="" title="Erekle II."/></a>Auch die Außenpolitik des späteren König Erekle II. (* 7. November 1720; † 11. Januar 1798) war stark europäisch orientiert. Er suchte Bündnisse mit verschiedenen europäischen Regierungen gegen Persien und das Osmanische Reich, fand jedoch keine Unterstützung.
 </td>
 </tr></table>
-<ul>
-<li></a>
-<li><a href="https://de.wikipedia.org/wiki/Demokratische_Republik_Georgien">Demokratische Republik Georgien</a>
-<li><a href="https://de.wikipedia.org/wiki/Kaukasuskrieg_2008">Kaukasuskrieg 2008</a>
+<p>Erst im Jahr 1783 schloss König Erekle II. zum Schutz vor dem persischen Schar und seinen Truppen mit der russischen Zarin Katharina II. einen Vertrag, in dem er sich verpflichtete, das russische Protektorat anzuerkennen und seine Streitkräfte in den Dienst des russischen Reiches zu stellen.<br/>
+Bei der <a href="https://de.wikipedia.org/wiki/Schlacht_von_Krtsanisi" target="_blank">Schlacht von Krtsanisi</a> musste Georgien sich dann aber ohne russische Unterstützung den alleine den Persern entgegenstellen, die Georgier wurden besiegt.</p>
+<p><a href="https://de.wikipedia.org/wiki/Demokratische_Republik_Georgien" target="_blank"><img src="img/mission/Flag_of_Georgia_(1918–1921).svg.png" width="140" align=left style="margin-top:10px; margin-right: 10px;" alt="" title="Flagge der DRG"/></a>Weil <a href="https://youtu.be/K34XQUzrrpI" target="_blank">im 19. Jahrhundert</a> Russland im Südkaukasus aber sein Einflussgebiet weiter ausbauen konnte war ein eigenständiger georgischer Staat unmöglich.<br/>
+Erst mit dem Zusammenbruch des Russischen Kaiserreiches in der Februarrevolution 1917 gelang 1918–1921 die Gründung einer ersten <a href="https://de.wikipedia.org/wiki/Demokratische_Republik_Georgien" target="_blank">Demokratischen Republik Georgien</a>s (DRG).<br/>
+Am 16. Februar 1921 wurde die DRG von der Roten Armee besetzt und als <a href="https://de.wikipedia.org/wiki/Georgische_Sozialistische_Sowjetrepublik" target="_blank">Georgische Sozialistische Sowjetrepublik</a> bis zum Ende der <a href="https://de.wikipedia.org/wiki/Sowjetunion" target="_blank">Sowjetunion</a> im Jahre 1991 in diese eingegliedert.</p>
+<p><img src="img/mission/Flag_of_Georgia.svg.png" width="140" align=right style="margin-top:10px; margin-left: 10px;" alt="" title="Flagge Georgiens"/>Für Georgien folgte mit der Wiedererlangung der Unabhängigkeit zwar eine "dunkle" Zeit mit Wahlfälschungen, weitverzweigter Korruption, Kriminalität und Stagnation der Wirtschaft auf einem sehr niedrigen Niveau aber seit den 2000er Jahren verfestigte sich in der Außenpolitik Georgiens der Wunsch, die Unabhängigkeit von Russland unumkehrbar zu machen.<br/>
+Ein geopolitischer Konflikt, der mit Sicherheitsinteressen Russlands auf der einen Seite und der von Georgien angestrebten Annäherung an den Westen, die NATO, die USA und die EU, durch Konflikte innerhalb Georgiens als <a href="https://de.wikipedia.org/wiki/Kaukasuskrieg_2008" target="_blank">Kaukasuskrieg 2008</a> gezeigt hat, dass Georgien historisch mal wieder alleine gelassen wurde.</p>
+<p>Auch wenn die Aufnahme Georgiens in die EU evtl. noch nicht heute auf der Tagesordnung steht, darf bei der aktuellen politischen Lage Georgien nicht der Willkür seines großen Nachbarn überlassen werden.<br/>
+Gemeinsam will diese Initiative mit Bildern von Balkonen in Georgien ein politisches Zeichen gegen Georgien als <span style="font-family: weathers; font-size: 22px;">#lostbalcony</span> setzen. Georgien als Kandidat für die EU ist ein politisches Zeichen und Georgien sollte nicht nur als unbeschreiblich schönes Urlaubsland am Rande Europas, sondern als Teil Europas mit einer Zukunft in der EU gesehen werden.</p>
+<!--ul>
 <li><a href="https://www.spiegel.de/ausland/gipfel-in-bruessel-ukraine-und-moldau-werden-eu-beitrittskandidaten-a-b5a8c5f5-285e-436a-9955-ff9294790581">Beitrittskandidaten 2022</a>
 <li><a href="https://www.spiegel.de/politik/deutschland/besuch-in-georgien-nach-eu-ablehnung-wie-ministerin-schulze-sorry-sagt-a-3b3944a7-9150-4e8d-8cfb-eb44b7bf49fc?utm_source=newsshowcase&utm_medium=discover&utm_campaign=CCwqFwgwKg8IACoHCAowydjaAjDA_BswurtbMKzHZw&utm_content=bullets&sara_ecid=soci_upd_wbMbjhOSvViISjc8RPU89NcCvtlFcJ">Schulze</a>
 <li><a href="https://zdfheute-stories-scroll.zdf.de/putin-kriege-ukraine/index.html#xtor=CS5-282">Putin Kriege Ukraine</a>
-</ul>
-
-<p>Auch wenn die Aufnahme Georgiens in die EU evtl. noch nicht heute auf der Tagesordnung steht darf bei der aktuellen politischen Lage darf Georgien nicht der Willkür seiner Nachbarn überlassen werden.
-Gemeinsam will diese Initiative mit Bildern von Balkonen in Georgien ein politisches Zeichen gegen Georgien als <span style="font-family: weathers; font-size: 20px;">#lostbalcony</span> setzen. Georgien als Kandidat für die EU ist ein politisches Zeichen und Georgien sollte nicht nur als unbeschreiblich schönes Urlaubsland am Rande Europas, sondern als Teil Europas mit einer Zukunft in der EU gesehen werden.</p>
-</body>
+</ul--></body>
 </html>
