--- a/test.html
+++ b/test.html
@@ -131,7 +131,7 @@
   }
   
   </script>
-</head>
+</head>lod
 <body class="wrapper-main">
   <header id="header-main">
     <nav>
@@ -402,7 +402,7 @@
 
   <section id="footer-main">
     <div class="footer-links">
-	  <a onclick="showImpressum()">Impressum</a>
+	  <a style="color: black; text-decoration: underline; text-decoration-thickness: 3px;" onclick="showImpressum()">Impressum</a>
 	  <a href="mailto:info@lostbalcony.eu">Contact</a>
 	</div>
 	<div class="social-list">
