--- a/test.html
+++ b/test.html
@@ -132,7 +132,7 @@
   
   </script>
 </head>
-<body class="wrapper-main">
+<body class="wrapper-main" onLoad="document.getElementById('language-picker-select').selectedIndex = 1;">
   <header id="header-main">
     <nav>
       <div style="margin-top: 10px; margin-bottom: 20px;">
@@ -197,205 +197,205 @@
   </header>
   <section id="index-gallery" class="wrapper-gallery">
     <div class="gallery-img img-1">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-2">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-3">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-4">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-5">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-6">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-7">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-8">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-9">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-10">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-11">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-12">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-13">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-14">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-15">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-16">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-17">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-18">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-19">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-20">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-21">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-22">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-23">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-24">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-25">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-26">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-27">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-28">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-29">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-30">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-31">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-32">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-33">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-34">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-35">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-36">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tbilissi</a></div>
     </div>
     <div class="gallery-img img-37">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">David Gareja</a></div>
     </div>
     <div class="gallery-img img-38">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">David Gareja</a></div>
     </div>
     <div class="gallery-img img-39">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kazbegi</a></div>
     </div>
     <div class="gallery-img img-40">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kazbegi</a></div>
     </div>
     <div class="gallery-img img-41">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kazbegi</a></div>
     </div>
     <div class="gallery-img img-42">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kazbegi</a></div>
     </div>
     <div class="gallery-img img-43">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kazbegi</a></div>
     </div>
     <div class="gallery-img img-44">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kazbegi</a></div>
     </div>
     <div class="gallery-img img-45">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kazbegi</a></div>
     </div>
     <div class="gallery-img img-46">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kazbegi</a></div>
     </div>
     <div class="gallery-img img-47">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kazbegi</a></div>
     </div>
     <div class="gallery-img img-48">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kazbegi</a></div>
     </div>
     <div class="gallery-img img-49">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kazbegi</a></div>
     </div>
     <div class="gallery-img img-50">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kazbegi</a></div>
     </div>
     <div class="gallery-img img-51">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kazbegi</a></div>
     </div>
     <div class="gallery-img img-52">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kazbegi</a></div>
     </div>
     <div class="gallery-img img-53">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kutaissi</a></div>
     </div>
     <div class="gallery-img img-54">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kutaissi</a></div>
     </div>
     <div class="gallery-img img-55">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kutaissi</a></div>
     </div>
     <div class="gallery-img img-56">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kutaissi</a></div>
     </div>
     <div class="gallery-img img-57">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kutaissi</a></div>
     </div>
     <div class="gallery-img img-58">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kutaissi</a></div>
     </div>
     <div class="gallery-img img-59">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kutaissi</a></div>
     </div>
     <div class="gallery-img img-60">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Kutaissi</a></div>
     </div>
     <div class="gallery-img img-61">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tashiskari, Ushangi Village</a></div>
     </div>
     <div class="gallery-img img-62">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tashiskari, Ushangi Village</a></div>
     </div>
     <div class="gallery-img img-63">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Tashiskari, Ushangi Village</a></div>
     </div>
     <div class="gallery-img img-64">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Borjomi</a></div>
     </div>
     <div class="gallery-img img-65">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Borjomi</a></div>
     </div>
     <div class="gallery-img img-66">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Borjomi</a></div>
     </div>
     <div class="gallery-img img-67">
-      <div><a href="#">This is a title</a></div>
+      <div><a href="#">Borjomi</a></div>
     </div>
   </section>
   <script src="js/gallery.js"></script>
