--- a/de.html
+++ b/de.html
@@ -23,6 +23,7 @@ body p {
   -ms-hyphens: auto;
   hyphens: auto;
 }  </style>
+</head>
 <body>
 <h2>Mission</h2>
 <p><span style="font-family: weathers; font-size: 22px;">#lostbalcony</span> ist eine Online-Initiative, die vor dem Verlust Georgiens als Balkon Europas warnt. Die Gefahr, dass Georgien im Jahr 2022 unter Eindruck eines brutalen Krieges in der Ukraine bei seinen Bestrebungen Teil der Europäischen Union (EU) zu werden vergessen wird, wäre ein historischer Fehler. Georgien ist genau wie die Ukraine und die Republik Moldau ein Teil Europas.</p>
@@ -30,8 +31,7 @@ body p {
 <p>Georgien, das wegen seiner Lage am Rand Europas, zwischen Europa und Asien, oft nur als "Balkon Europas" bezeichnet wird, hat eine enge geschichtliche Verbindung zu Europa.</p>
 
 <p><a href="https://persoenliches-georgien.de/tipps_ursprung.html" target="_blank"><img src="img/mission/schaedel_wein.png" width="160" align=right style="margin-left: 10px;" alt="" title="Homo georgicus - der erste europäische Winzer" /></a> Die Ausbreitung des Homo erectus von Afrika nach Europa wird durch aktuelle Ausgrabungen in Georgien nachgewiesen. Diese zeigen wie Frühmenschen vor 2 Mio. Jahren in Dmanissi - im südlichen Georgien - zu finden sind.<br/>
-Eine andere Form europäischen Kulturguts ist der Weinanbau, der in Georgien Tradition hat und bereits 6.000 Jahre v. Chr. Spuren hinterlassen hat. Ausgrabungen belegen den Anbau kultivierter Weinreben, die noch heute angebaut werden.
-</p>
+Eine andere Form europäischen Kulturguts ist der Weinanbau, der in Georgien Tradition hat und bereits 6.000 Jahre v. Chr. Spuren hinterlassen hat. Ausgrabungen belegen den Anbau kultivierter Weinreben, die noch heute angebaut werden.</p>
 
 <p>Auch wenn die Beziehung Georgiens mit Russland als großem Nachbarn im Kaukasus und Georgien als Teil der Sowjetunion im 19. und 20. Jahrhundert die Geschichte Georgiens geprägt hat, ist dies kein Grund dafür Georgien aus der europäischen Familie auszuschließen.</p>
 
@@ -52,9 +52,5 @@ Am 16. Februar 1921 wurde die DRG von der Roten Armee besetzt und als <a href="h
 Ein geopolitischer Konflikt, der mit Sicherheitsinteressen Russlands auf der einen Seite und der von Georgien angestrebten Annäherung an den Westen, die NATO, die USA und die EU, durch Konflikte innerhalb Georgiens als <a href="https://de.wikipedia.org/wiki/Kaukasuskrieg_2008" target="_blank">Kaukasuskrieg 2008</a> gezeigt hat, dass Georgien historisch mal wieder alleine gelassen wurde.</p>
 <p>Auch wenn die Aufnahme Georgiens in die EU evtl. noch nicht heute auf der Tagesordnung steht, darf bei der aktuellen politischen Lage das Land nicht der Willkür seines großen Nachbarn überlassen werden.<br/>
 Gemeinsam will diese Initiative mit Bildern von Balkonen in Georgien ein politisches Zeichen gegen Georgien als <span style="font-family: weathers; font-size: 22px;">#lostbalcony</span> setzen. Georgien als Kandidat für die EU ist ein politisches Zeichen und es sollte nicht nur als unbeschreiblich schönes .jpegaubsland am Rande Europas, sondern als Teil Europas mit einer Zukunft in der EU gesehen werden.</p>
-<!--ul>
-<li><a href="https://www.spiegel.de/ausland/gipfel-in-bruessel-ukraine-und-moldau-werden-eu-beitrittskandidaten-a-b5a8c5f5-285e-436a-9955-ff9294790581">Beitrittskandidaten 2022</a>
-<li><a href="https://www.spiegel.de/politik/deutschland/besuch-in-georgien-nach-eu-ablehnung-wie-ministerin-schulze-sorry-sagt-a-3b3944a7-9150-4e8d-8cfb-eb44b7bf49fc?utm_source=newsshowcase&utm_medium=discover&utm_campaign=CCwqFwgwKg8IACoHCAowydjaAjDA_BswurtbMKzHZw&utm_content=bullets&sara_ecid=soci_upd_wbMbjhOSvViISjc8RPU89NcCvtlFcJ">Schulze</a>
-<li><a href="https://zdfheute-stories-scroll.zdf.de/putin-kriege-ukraine/index.html#xtor=CS5-282">Putin Kriege Ukraine</a>
-</ul--></body>
+</body>
 </html>
