--- a/test.html
+++ b/test.html
@@ -377,13 +377,13 @@
       <div><a href="#">Kutaissi</a></div>
     </div>
     <div class="gallery-img img-61">
-      <div><a href="#">Tashiskari, Ushangi Village</a></div>
+      <div><a href="#">Tashiskari,<br/>Ushangi Village</a></div>
     </div>
     <div class="gallery-img img-62">
-      <div><a href="#">Tashiskari, Ushangi Village</a></div>
+      <div><a href="#">Tashiskari,<br/>Ushangi Village</a></div>
     </div>
     <div class="gallery-img img-63">
-      <div><a href="#">Tashiskari, Ushangi Village</a></div>
+      <div><a href="#">Tashiskari,<br/>Ushangi Village</a></div>
     </div>
     <div class="gallery-img img-64">
       <div><a href="#">Borjomi</a></div>
