--- a/test.html
+++ b/test.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/gallery.css">
-  <link rel="stylesheet" media="screen and (max-width: 320px)" href="css/gallery1.css">
-  <link rel="stylesheet" media="screen and (min-width: 321px) and (max-width: 639px)" href="css/gallery2.css">
-  <link rel="stylesheet" media="screen and (min-width: 640px) and (max-width: 1023px)" href="css/gallery3.css">
-  <link rel="stylesheet" media="screen and (min-width: 1024px) and (max-width: 1599px)" href="css/gallery4.css">
+  <link rel="stylesheet" media="screen and (min-width: 320px)" href="css/gallery1.css">
+  <link rel="stylesheet" media="screen and (min-width: 640px)" href="css/gallery2.css">
+  <link rel="stylesheet" media="screen and (min-width: 1024px)" href="css/gallery3.css">
+  <link rel="stylesheet" media="screen and (min-width: 1280px)" href="css/gallery4.css">
   <link rel="stylesheet" media="screen and (min-width: 1600px)" href="css/gallery7.css">
   <script>
   let currentLang = "de";
@@ -201,7 +201,7 @@
     </div>
     <div class="gallery-img img-2">
       <div><a href="#">Tbilissi</a></div>
-    </div>
+	</div>
     <div class="gallery-img img-3">
       <div><a href="#">Tbilissi</a></div>
     </div>
