--- a/test2.html
+++ b/test2.html
@@ -21,7 +21,7 @@
 	  {
 		var elem = document.querySelector(name)
 		var style = getComputedStyle(elem);
-	    alert(name + " display: " + style.display + " visibility: " + style.visibility);
+	    // alert(name + " display: " + style.display + " visibility: " + style.visibility);
 	    if (style.display === "block" && 
 		    style.visibility === "visible")
 		{
